--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header class="p-2 bg-primary">
+    <header class="pt-3 pb-3 my-bg-header">
         <div class="container">
             <div class="row justify-content-between align-items-center">
-                <div class="col-auto">START BOOTSTRAP</div>
+                <div class="col-auto title-header">START BOOTSTRAP</div>
                 <div class="col-auto d-md-none">
                     <button type="button" class="btn btn-outline-secondary">
                         <i class="fa-solid fa-bars"></i>
@@ -33,11 +33,15 @@
             </div>
         </div>
     </header>
-    <section class="bg-secondary">
-        <div class="container">
-            <div class="row justify-content-center align-items-center text-center">
-                <div class="col-3">
+    <section class="my-bg-s1">
+        <div class="p-3 container">
+            <div class="gy-1 row justify-content-center align-items-center text-center">
+                <div class="col-6 img-max">
                     <img class="" src="img/avatar.svg" alt="">
+                </div>
+                <div class="col-12">
+                    <div></div>
+                    
                 </div>
                 <div class="w-100"></div>
                 <div class="col-12">
@@ -49,7 +53,7 @@
     </section>
     <section class="bg-primary">
         <div class="container">
-            <div class="row gy-4 justify-content-center">
+            <div class="row justify-content-center">
                 <div class="col-12 text-center">
                     PORTFOLIO
                 </div>
@@ -76,7 +80,7 @@
     </section>
     <section>
         <div class="container">
-            <div class="row gy-4">
+            <div class="row justify-content-center">
                 <div class="col-auto">
                     ABOUT
                 </div>
