--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <div class="container">
             <div class="row gy-4 justify-content-center">
                 <div class="col-12">
-                    <h2 class="col-12 mb-3 text-center">
+                    <h2 class="col-12 mt-3 mt-md-1 mb-3 text-center">
                         PORTFOLIO
                     </h2>
                     <div class="col-12 d-flex justify-content-center align-items-center ">
@@ -88,9 +88,9 @@
         </div>
     </section>
 
-    <section class="section-3 p-5 my-bg-s3">
+    <section class="section-3 p-4 p-md-5 my-bg-s3">
         <div class="container-xs">
-            <div class="row gy-3 gy-md-3 justify-content-center">
+            <div class="row gy-1 gy-md-1 justify-content-center">
                 <div class="col-12">
                     <h2 class="col-auto text-center">
                         ABOUT
@@ -109,7 +109,7 @@
                 <div class="col-auto col-md-6 text-little">
                     Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!
                 </div>
-                <div class="col-auto col-md-auto">
+                <div class="col-auto col-md-auto mt-4">
                     <button type="button" class="btn btn-outline-secondary">
                         <i class="fa-solid fa-download"></i>
                         Download
