--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Title -->
     <title>Bootstrap Freelancer</title>
+        <!-- Font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@100;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <!-- Bootstrap css -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <!-- Icons -->
@@ -18,20 +22,20 @@
     <header class="header-page">
         <nav class="navbar navbar-expand-lg bg-light position-fixed top-0 left-0 w-100 fw-bold">
             <div class="container">
-              <a class="navbar-brand text-white" href="#">START BOOTSTRAP</a>
+              <a class="navbar-brand text-white my_h3-nav" href="#">START BOOTSTRAP</a>
               <a class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <i class="fa-solid fa-bars"></i>
               </a>
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link text-white" href="#">PORTFOLIO</a>
+                    <a class="nav-link text-white my_h4-nav" href="#">PORTFOLIO</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link text-white" href="#">ABOUT</a>
+                    <a class="nav-link text-white my_h4-nav" href="#">ABOUT</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link text-white" href="#">CONTACT</a>
+                    <a class="nav-link text-white my_h4-nav" href="#">CONTACT</a>
                   </li>
                 </ul>
               </div>
@@ -41,24 +45,24 @@
           <section class="section-1 py-4 container text-center">
             <div class="container">
                 <img class="col-6 col-md-2 mb-3" src="img/avatar.svg" alt="">
-                <h1>START BOOTSTRAP</h1>
+                <h1 class="text-white  my_h1">START BOOTSTRAP</h1>
                 <div class="col-12 mt-3 mb-3 d-flex justify-content-center align-items-center">
-                    <div class="line border border-white bg-white"></div>
+                    <div class="line"></div>
                     <i class="ms-3 me-3 fa-solid fa-star text-white"></i>
-                    <div class="line border border-white bg-white"></div>
+                    <div class="line"></div>
                 </div>
-                <div class="col-12 job">GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR</div>
+                <div class="col-12 text-white my_h3">GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR</div>
             </div>
           </section>
     </header>
 
     <section class="portfolio py-4">
         <div class="container text-center">
-            <h2>PORTFOLIO</h2>
+            <h2 class="my_h2">PORTFOLIO</h2>
             <div class="col-12 mt-3 mb-3 d-flex justify-content-center align-items-center">
-                <div class="line border border-black bg-black"></div>
-                <i class="ms-3 me-3 fa-solid fa-star text-black"></i>
-                <div class="line border border-black bg-black"></div>
+                <div class="line"></div>
+                <i class="ms-3 me-3 fa-solid fa-star"></i>
+                <div class="line"></div>
             </div>
             <div class="overflow-hidden">
                 <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
@@ -119,11 +123,11 @@
     <section class="about py-4 text-white">
         <div class="container text-center">
             <div class="col-10 mx-auto">
-                <h2>ABOUT</h2>
+                <h2 class="my_h2">ABOUT</h2>
                 <div class="col-12 mt-3 mb-3 d-flex justify-content-center align-items-center ">
-                    <div class="line line border border-white bg-white"></div>
+                    <div class="line "></div>
                     <i class="ms-3 me-3 fa-solid fa-star text-white"></i>
-                    <div class="line line border border-white bg-white"></div>
+                    <div class="line"></div>
                 </div>
                 <div class="overflow-hidden">
                     <div class="row text-start g-5">
@@ -146,24 +150,24 @@
     <section class="contact-me py-4">
         <div class="container">
             <div class="col-7 mx-auto">
-                <h2 class="text-center">CONTACT ME</h2>
+                <h2 class="text-center my_h2">CONTACT ME</h2>
                 <div class="col-12 d-flex justify-content-center align-items-center">
-                    <div class="line border border-black bg-black"></div>
-                    <i class="ms-3 me-3 fa-solid fa-star text-black"></i>
-                    <div class="line border border-black bg-black"></div>
+                    <div class="line"></div>
+                    <i class="ms-3 me-3 fa-solid fa-star"></i>
+                    <div class="line"></div>
                 </div>
                 <form action="" method="post">
                     <div class="mb-3">
-                        <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Name">
+                        <input type="text" class="form-control my_text" id="formGroupExampleInput" placeholder="Name">
                       </div>
                       <div class="mb-3">
-                        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Email Address">
+                        <input type="email" class="form-control my_text" id="exampleFormControlInput1" placeholder="Email Address">
                       </div>
                       <div class="mb-3">
-                        <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Phone Number">
+                        <input type="text" class="form-control my_text" id="formGroupExampleInput2" placeholder="Phone Number">
                       </div>
                       <div class="mb-3">
-                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Message"></textarea>
+                        <textarea class="form-control my_text" id="exampleFormControlTextarea1" rows="3" placeholder="Message"></textarea>
                       </div>
                       <button type="submit" class="btn btn-primary my_text fw-semibold">Send</button>
                 </form>
@@ -176,28 +180,28 @@
             <div class="overflow-hidden">
                 <div class="row gy-4">
                     <div class="col-12 col-sm-4">
-                        <div class="job">LOCATION</div>
+                        <div class="my_h3">LOCATION</div>
                         <div class="my_text">2215 John Daniel Drive Clark, MO 54243</div>
                     </div>
                     <div class="col-12 col-sm-4">
-                        <div class="mb-1 job">AROUND THE WEB</div>
+                        <div class="mb-1 my_h3">AROUND THE WEB</div>
                         <div class="d-flex justify-content-center">
                             <div class="me-2 d-flex justify-content-center align-items-center circle-social">
-                                <i class="fa-brands fa-facebook-f"></i>
+                                <i class="fa-brands fa-facebook-f text-white"></i>
                             </div>
                             <div class="me-2 d-flex justify-content-center align-items-center circle-social">
-                                <i class="fa-brands fa-google-plus-g"></i>
+                                <i class="fa-brands fa-google-plus-g text-white"></i>
                             </div>
                             <div class="me-2 d-flex justify-content-center align-items-center circle-social">
-                                <i class="fa-brands fa-twitter"></i>
+                                <i class="fa-brands fa-twitter text-white"></i>
                             </div>
                             <div class="d-flex justify-content-center align-items-center circle-social">
-                                <i class="fa-brands fa-linkedin-in"></i>
+                                <i class="fa-brands fa-linkedin-in text-white"></i>
                             </div> 
                         </div>
                     </div>
                     <div class="col-12 col-sm-4">
-                        <div class="job">ABOUT FREELANCER</div>
+                        <div class="my_h3">ABOUT FREELANCER</div>
                         <div class="my_text">Freelance is a free to use, open source Bootstrap theme created by <span>Start Bootstrap</span></div>
                     </div>
                 </div>
@@ -206,7 +210,7 @@
     </footer>
     <div class="p-4 sub-footer">
         <div class="row justify-content-center align-items-center">
-            <div class="col-12 text-center">
+            <div class="col-12 text-center my_text-subfooter text-white">
                 Copyright &#169; Your Website 2019  
             </div>
         </div>
