--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </div>
           </nav>
 
-          <section class="section-1 py-4 container text-center">
+          <section class="section-1 py-5 container text-center">
             <div class="container">
                 <img class="col-6 col-md-2 mb-3" src="img/avatar.svg" alt="">
                 <h1 class="text-white  my_h1">START BOOTSTRAP</h1>
@@ -56,7 +56,7 @@
           </section>
     </header>
 
-    <section class="portfolio py-4">
+    <section class="portfolio py-5">
         <div class="container text-center">
             <h2 class="my_h2">PORTFOLIO</h2>
             <div class="col-12 mt-3 mb-3 d-flex justify-content-center align-items-center">
@@ -120,7 +120,7 @@
         </div>
     </section>
 
-    <section class="about py-4 text-white">
+    <section class="about py-5 text-white">
         <div class="container text-center">
             <div class="col-10 mx-auto">
                 <h2 class="my_h2">ABOUT</h2>
@@ -147,7 +147,7 @@
         </div>
     </section>
 
-    <section class="contact-me py-4">
+    <section class="contact-me py-5">
         <div class="container">
             <div class="col-7 mx-auto">
                 <h2 class="text-center my_h2">CONTACT ME</h2>
@@ -157,7 +157,7 @@
                     <div class="line"></div>
                 </div>
                 <form action="" method="post">
-                    <div class="mb-3">
+                    <div class="mb-3 mt-3">
                         <input type="text" class="form-control my_text" id="formGroupExampleInput" placeholder="Name">
                       </div>
                       <div class="mb-3">
@@ -175,7 +175,7 @@
         </div>
     </section>
 
-    <footer class="py-4 text-white">
+    <footer class="py-5 text-white">
         <div class="container text-center">
             <div class="overflow-hidden">
                 <div class="row gy-4">
