--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
 </head>
 <body>
     <header class="header-page">
-        <nav class="navbar navbar-expand-lg bg-light position-fixed top-0 left-0 w-100 fw-bold">
+        <nav class="navbar navbar-expand-sm bg-light position-fixed top-0 left-0 w-100 fw-bold">
             <div class="container">
               <a class="navbar-brand text-white my_h3-nav" href="#">START BOOTSTRAP</a>
               <a class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <i class="fa-solid fa-bars"></i>
               </a>
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                <ul class="navbar-nav ms-auto mb-2 mb-sm-0">
                   <li class="nav-item">
                     <a class="nav-link text-white my_h4-nav" href="#">PORTFOLIO</a>
                   </li>
@@ -186,18 +186,18 @@
                     <div class="col-12 col-sm-4">
                         <div class="mb-1 my_h3">AROUND THE WEB</div>
                         <div class="d-flex justify-content-center">
-                            <div class="me-2 d-flex justify-content-center align-items-center circle-social">
+                            <a class="me-2 d-flex justify-content-center align-items-center circle-social">
                                 <i class="fa-brands fa-facebook-f text-white"></i>
-                            </div>
-                            <div class="me-2 d-flex justify-content-center align-items-center circle-social">
+                            </a>
+                            <a class="me-2 d-flex justify-content-center align-items-center circle-social">
                                 <i class="fa-brands fa-google-plus-g text-white"></i>
-                            </div>
-                            <div class="me-2 d-flex justify-content-center align-items-center circle-social">
+                            </a>
+                            <a class="me-2 d-flex justify-content-center align-items-center circle-social">
                                 <i class="fa-brands fa-twitter text-white"></i>
-                            </div>
-                            <div class="d-flex justify-content-center align-items-center circle-social">
+                            </a>
+                            <a class="d-flex justify-content-center align-items-center circle-social">
                                 <i class="fa-brands fa-linkedin-in text-white"></i>
-                            </div> 
+                            </a> 
                         </div>
                     </div>
                     <div class="col-12 col-sm-4">
