--- a/index.html
+++ b/index.html
@@ -186,16 +186,16 @@
                     <div class="col-12 col-sm-4">
                         <div class="mb-1 my_h3">AROUND THE WEB</div>
                         <div class="d-flex justify-content-center">
-                            <a class="me-2 d-flex justify-content-center align-items-center circle-social">
+                            <a href="" class="me-2 d-flex justify-content-center align-items-center circle-social">
                                 <i class="fa-brands fa-facebook-f text-white"></i>
                             </a>
-                            <a class="me-2 d-flex justify-content-center align-items-center circle-social">
+                            <a href="" class="me-2 d-flex justify-content-center align-items-center circle-social">
                                 <i class="fa-brands fa-google-plus-g text-white"></i>
                             </a>
-                            <a class="me-2 d-flex justify-content-center align-items-center circle-social">
+                            <a href="" class="me-2 d-flex justify-content-center align-items-center circle-social">
                                 <i class="fa-brands fa-twitter text-white"></i>
                             </a>
-                            <a class="d-flex justify-content-center align-items-center circle-social">
+                            <a href="" class="d-flex justify-content-center align-items-center circle-social">
                                 <i class="fa-brands fa-linkedin-in text-white"></i>
                             </a> 
                         </div>
